--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="./recipes/lumpia.html">Lumpia Recipe</a>
+    <a href="/recipes/lumpia.html">Lumpia Recipe</a>
     
 </body>
 </html>
